--- a/templates/blog/category.html.twig
+++ b/templates/blog/category.html.twig
@@ -1,12 +1,10 @@
 {% extends 'base.html.twig' %}
-
-{% block title %}All articles{% endblock %}
-
+    
 {% block body %}
     <h1>All articles from article s table : </h1>
     {% for article in articles %}
         <div>
-            <h2>{{ loop.index }} / {{ article.title }} - Category : {{ article.category.name }}</h2>
+            <h2>{{ loop.index }} / {{ categoryName.name }} - Category : {{ article.title }}</h2>
             <p>{{ article.content }}</p>
         </div>
     {% else %}
@@ -16,4 +14,3 @@
       Back to homepage.
     </a>
 {% endblock %}
-
