--- a/templates/blog/category.html.twig
+++ b/templates/blog/category.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
-    
+
 {% block body %}
     <h1>All articles from article s table : </h1>
-    {% for article in articles %}
+    {% for i in 0..2 %}
         <div>
-            <h2>{{ article.id }} / {{ categoryName.name }} - Category : {{ article.title }}</h2>
-            <p>{{ article.content }}</p>
+            <h2>{{ articles[i].id }} / {{ categoryName.name }} - Category : {{ articles[i].title }}</h2>
+            <p>{{ articles[i].content }}</p>
         </div>
     {% else %}
         Aucun article trouvé.
