--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -27,4 +27,14 @@
     <a href="{{ path('article_edit', {'id': article.id}) }}">edit</a>
 
     {{ include('article/_delete_form.html.twig') }}
+
+    <strong>Tags :</strong>
+<ul>
+    {% for tag in article.tags %}
+        <li>{{ tag.name }} </li>
+    {% else %}
+        <li>No tags for this article</li>
+    {% endfor %}
+</ul>
+
 {% endblock %}
