--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
+        {% include 'blog/navbar.html.twig' %}
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
+        {% endblock %}
+        <script src="build/js/app.js"></script>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        <header>
+            {% block nav %}{% endblock %}
+        </header>
+
+            {% block body %}{% endblock %}
+            {% block javascripts %}
+               {{ encore_entry_script_tags('app') }}
+            {% endblock %}
     </body>
+
 </html>
