14 - Symfony : Les fixtures

--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -8,8 +8,8 @@
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ article.id }}</td>
+                <th>Categorie</th>
+                <td>{{ article.category.name }}</td>
             </tr>
             <tr>
                 <th>Title</th>
