--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -5,10 +5,11 @@
 {% block body %}
     <h1>Article index</h1>
 
+    <a href="{{ path('article_new') }}">Create new</a>
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
+                <th>Category</th>
                 <th>Title</th>
                 <th>Content</th>
                 <th>actions</th>
@@ -17,7 +18,7 @@
         <tbody>
         {% for article in articles %}
             <tr>
-                <td>{{ article.id }}</td>
+                <td>{{ article.category.name }}</td>
                 <td>{{ article.title }}</td>
                 <td>{{ article.content }}</td>
                 <td>
@@ -33,5 +34,4 @@
         </tbody>
     </table>
 
-    <a href="{{ path('article_new') }}">Create new</a>
 {% endblock %}
