--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        {% include 'blog/navbar.html.twig' %}
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -13,7 +12,7 @@
     </head>
     <body>
         <header>
-            {% block nav %}{% endblock %}
+            {% block nav %}{% include 'blog/navbar.html.twig' %}{% endblock %}
         </header>
 
             {% block body %}{% endblock %}
