--- a/templates/blog/navbar.html.twig
+++ b/templates/blog/navbar.html.twig
@@ -2,6 +2,11 @@
 	<nav class="navbar navbar-dark bg-dark">
   		<div class="container">
     		<a class="navbar-brand" href="http://localhost:8000/article/#">Ma Jolie Navbar</a>
+    		{% if app.user %}Bonjour {{ app.user.email }} !
+    			<a href="{{ path('app_logout') }}"> Se déconnecter</a>
+			{% else %}
+    			<a href="{{ path('app_login') }}"> Se connecter</a>
+			{% endif %}
  		</div>
  	</nav>
 {% endblock %}
