--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -3,17 +3,20 @@
 {% block title %}All articles{% endblock %}
 
 {% block body %}
+    <div class="container">
     <h1>All articles from article s table : </h1>
     {% for article in articles %}
         <div>
             <h2>{{ loop.index }} / {{ article.title }} - Category : {{ article.category.name }}</h2>
             <p>{{ article.content }}</p>
         </div>
+    <hr>
     {% else %}
         Aucun article trouvé.
     {% endfor %}
     <a href="{{ path('app_index') }}">
       Back to homepage.
     </a>
+    </div>
 {% endblock %}
 
