--- a/templates/blog/navbar.html.twig
+++ b/templates/blog/navbar.html.twig
@@ -1,11 +1,14 @@
 {% block nav %}
 	<nav class="navbar navbar-dark bg-dark">
   		<div class="container">
-    		<a class="navbar-brand" href="http://localhost:8000/article/#">Ma Jolie Navbar</a>
-    		{% if app.user %}Bonjour {{ app.user.email }} !
-    			<a href="{{ path('app_logout') }}"> Se déconnecter</a>
+    		<a class="navbar-brand" href="http://localhost:8000/1">Home</a>
+    		<a class="navbar-brand" href="{{ path('article_index') }}">articleAdm</a>
+    		<a class="navbar-brand" href="{{ path('article_new') }}">new article</a>
+    		<a class="navbar-brand" href="{{ path('form') }}">Cat</a>
+    		{% if app.user %}
+    			<a class="navbar-brand" href="{{ path('app_logout') }}"> Se déconnecter {{ app.user.email }}</a>
 			{% else %}
-    			<a href="{{ path('app_login') }}"> Se connecter</a>
+    			<a class="navbar-brand" href="{{ path('app_login') }}"> Se connecter</a>
 			{% endif %}
  		</div>
  	</nav>
